<resources>
    <string name="app_name">Autopia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_acc">Don\'t Have An Account? Sign Up.</string>
    <string name="username">Username</string>
    <string name="confirmed_password">Confirmed Password</string>
    <string name="have_acc">Have An Account? Sign In.</string>
    <string name="im_a_service_provider"><u>I\'m A Service Provider.</u></string>
    <string name="workshop_name">Workshop Name</string>
    <string name="im_a_vehicle_owner"><u>I\'m A Vehicle Owner.</u></string>
    <string name="general_workshop">General Automotive Workshop</string>
    <string name="service_centre">Authorised Service Centre</string>
    <string name="nearby_workshops">Nearby Workshops</string>
    <string name="view_all">View All</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vehicles">Vehicles</string>
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
    <string name="sync">Sync with Other User</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="rate">Rate Us</string>
    <string name="share">Share</string>
    <string name="appointment">Appointment</string>
    <string name="history">History</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="service_providers">Service Providers</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="done">Done</string>
    <string name="rating_and_review">Rating &amp; Review</string>
    <string name="nearby">Nearby </string>
    <string name="all">All</string>
    <string name="upload_cover">Upload Cover Photo</string>
    <string name="edit">Edit</string>
    <string name="phone_no">Phone No.</string>
    <string name="upcoming_appointment">Upcoming Appointments</string>
    <string name="past_appointment">Past Appointments</string>
    <string name="upload_vehicle_photo">Upload Vehicle Photo</string>
    <string name="plate_no">Plate No.</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="purchase_year">Purchase Year</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="engine_oil_change">Engine Oil Change</string>
    <string name="dummy_price">RM 100.00</string>
    <string name="proceed">Proceed</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_no">Your Phone No.</string>
    <string name="description_optional">Description (optional)</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="dummy_date_time">8th Jan 2022, 11:00 A.M.</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="service_request">Service Requested:</string>
    <string name="dummy_car_plate">WBR1234</string>
    <string name="dummy_your_name">Xin Li</string>
    <string name="dummy_your_phone">012–3456789</string>
    <string name="your_name_colon">Your Name: </string>
    <string name="dummy_date">8th Jan 2022</string>
    <string name="dummy_time">11:00 A.M.</string>
    <string name="appointment_time_colon">Appointment Time:</string>
    <string name="appointment_date_colon">Appointment Date:</string>
    <string name="your_phone_no_colon">Your Phone No.: </string>
    <string name="vehicle">Vehicle: </string>
    <string name="book_appointment">Book Appointment</string>
    <string name="description">Description</string>
    <string name="quoted_price">Quoted Price (RM): </string>
    <string name="dummy_description">I need to perform an engine oil change, please help.</string>
    <string name="forgot_pw_text">Hey there, forgot your password? No worries, tell us your email and we\'ll send you a recovery link.</string>
    <string name="upload_service_photo">Upload Service Photo</string>
    <string name="service_name">Service Name</string>
    <string name="service_description">Service Description</string>
    <string name="service_quotation_optional">Quotation Price (Optional)</string>
    <string name="add_service">Add Service</string>
    <string name="workshops">Workshops</string>
    <string name="im_a_workshop_owner"><u>I\'m A Workshop Owner.</u></string>
    <string name="fav_workshop">Favorite Workshop</string>
    <string name="fav_workshops">Favorite Workshops</string>
    <string name="greeting">Greeting</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="current_mileage_optional">Current Mileage (Optional)</string>
    <string name="view">View</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="label">{label}</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="workshop">Workshop</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="workshop_details">Workshop Details</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="vehicle_plate_no">Vehicle Plate No.</string>
    <string name="info">Info</string>
    <string name="request_appointment">Request Appointment</string>
    <string name="pending">Pending</string>
    <string name="upcoming">Upcoming</string>
    <string name="rejected_cancelled">Rejected/Cancelled</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="client_name">Client Name: </string>
    <string name="description_colon">Description: </string>
    <string name="update">Update</string>
    <string name="update_workshop_details">Update Workshop Details</string>
    <string name="go_to_permission_settings">Go to Settings</string>
    <string name="view_workshops">View Workshops</string>
    <string name="not_logged_in">Hey there, it seems that you are not logged in yet!</string>
    <string name="no_location_permission">Location permission has been denied.</string>
    <string name="no_workshops_found">Oops, it seems like none of our workshops are within your area.</string>
    <string name="no_appointments">Oops, no appointments spotted here.</string>
    <string name="no_histories">Oops, no histories spotted here.</string>
    <string name="no_chats">No messages had been received.</string>
    <string name="action_filter">Filter</string>
    <string name="loading">Loading…</string>
    <string name="chat_receiver">{name}</string>
    <string name="socket_timeout">Oh snap, network request timeout.</string>
    <string name="refresh">Refresh</string>
    <string name="type_here">Type here…</string>
    <string name="one_day_view">Day view</string>
    <string name="three_day_view">Three days view</string>
    <string name="five_day_view">Five days view</string>
    <string name="week_view">Week view</string>
    <string name="empty_conversations">Your inbox is currently empty.</string>
    <string name="action_today">Go to today</string>
    <string name="fcm_token">FCM Token</string>
    <string name="upload_content">Send</string>
    <string name="image">Image/Video</string>
    <string name="video">Video</string>
    <string name="document">Document</string>
    <string name="booking_details">Booking Details</string>
    <string name="select_vehicles">Select A Vehicle</string>
    <string name="select_services">Select A Service</string>
    <string name="service_colon">Service: </string>
    <string name="quotation_colon">Quotation (RM): </string>
    <string name="client_details">Client Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="reschedule">Reschedule</string>
    <string name="reschedule_appointments">Reschedule Appointment</string>
    <string name="favorite_workshops">Favorite Workshops</string>
    <string name="service_reminders">Service Reminders</string>
    <string name="appointment_duration">Appointment Duration</string>
    <string name="statistics">Statistics</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="reason_ignore">Reason (ignore this if you reschedule)</string>
    <string name="alternate">You may consider appointment rescheduling.</string>
    <string name="reason_for_rejection">Reason of rejection: (Ignore if you decide to reschedule)</string>
    <string name="reason_for_cancellation">Reason of cancellation: (Ignore if you decide to proceed with rescheduling)</string>
    <string name="reject_confirmation">Are you sure of rejecting/cancelling the appointment?</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this appointment request?</string>
    <string name="duration_suggestion">Please suggest the duration needed to complete the service requested.</string>
    <string name="no_show">No Show</string>
    <string name="propose_new_date_time">Please propose new appointment date time.</string>
    <string name="appointment_duration_colon">Duration (min):</string>
    <string name="end_time_colon">End Time:</string>
    <string name="start_time_colon">Start Time:</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="empty_notifications">No notifications found.</string>
    <string name="remarks">Remarks</string>
    <string name="additional_info">Additional Info (Optional)</string>
    <string name="service_reminder">Service Reminder</string>
    <string name="service_reminder_review">Service Reminder Review</string>
    <string name="profile_views">Profile Views</string>
    <string name="bookings">Bookings</string>
    <string name="popular_services">Popular Services</string>
    <string name="insights">Insights</string>
    <string name="products">Products</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="promotions_customers">Promotions &amp; Customers</string>
    <string name="promotion">Promotion</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="news">News</string>
</resources>