<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/vehiclesFragment"
            android:icon="@drawable/vehicles"
            android:title="@string/vehicles" />
        <item
            android:id="@+id/serviceReminderFragment"
            android:icon="@drawable/services"
            android:title="@string/service_reminders" />
        <item
            android:id="@+id/favoriteWorkshopFragment"
            android:icon="@drawable/love"
            android:title="@string/favorite_workshops" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/logInActivity"
                    android:icon="@drawable/login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/signUpActivity"
                    android:icon="@drawable/sign_up"
                    android:title="@string/signup" />
                <item
                    android:id="@+id/logoutActivity"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
            </menu>
        </item>

    </group>

</menu>