<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.autopia.activities.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.autopia.activities.ui.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/serviceProviderListFragment"
        android:name="com.example.autopia.activities.ui.fragments.WorkshopsListFragment"
        android:label="@string/workshops"
        tools:layout="@layout/fragment_service_provider_list" />
    <fragment
        android:id="@+id/appointmentFragment"
        android:name="com.example.autopia.activities.ui.fragments.AppointmentFragment"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_appointment" />
    <activity
        android:id="@+id/serviceProviderSignUpActivity"
        android:name="com.example.autopia.activities.ui.WorkshopSignUpActivity"
        android:label="activity_service_provider_sign_up"
        tools:layout="@layout/activity_service_provider_sign_up" />
    <activity
        android:id="@+id/signUpActivity"
        android:name="com.example.autopia.activities.ui.SignUpActivity"
        android:label="activity_sign_up"
        tools:layout="@layout/activity_sign_up" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.autopia.activities.ui.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.autopia.activities.ui.fragments.ConversationFragment"
        android:label="@string/chat" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.autopia.activities.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/allServiceProvidersFragment"
        android:name="com.example.autopia.activities.ui.fragments.WorkshopsFragment"
        android:label="fragment_all_service_providers"
        tools:layout="@layout/fragment_all_service_providers" />
    <fragment
        android:id="@+id/nearbyServiceProvidersFragment"
        android:name="com.example.autopia.activities.ui.fragments.NearbyWorkshopsFragment"
        android:label="fragment_nearby_service_providers"
        tools:layout="@layout/fragment_nearby_service_providers" />
    <activity
        android:id="@+id/forgotPasswordActivity"
        android:name="com.example.autopia.activities.ui.ForgotPasswordActivity"
        android:label="activity_forgot_password"
        tools:layout="@layout/activity_forgot_password" />
    <activity
        android:id="@+id/splashActivity"
        android:name="com.example.autopia.activities.ui.SplashActivity"
        android:label="activity_splash"
        tools:layout="@layout/activity_splash" />
    <fragment
        android:id="@+id/vehiclesFragment"
        android:name="com.example.autopia.activities.ui.fragments.VehiclesFragment"
        android:label="@string/vehicles"
        tools:layout="@layout/fragment_vehicles" />
    <fragment
        android:id="@+id/addVehicleFragment"
        android:name="com.example.autopia.activities.ui.fragments.AddVehicleFragment"
        tools:layout="@layout/fragment_add_vehicle" />
    <fragment
        android:id="@+id/bookingReviewFragment"
        android:name="com.example.autopia.activities.ui.fragments.BookingReviewFragment"
        android:label="@string/book_appointment" />
    <fragment
        android:id="@+id/bookingDateTimeFragment"
        android:name="com.example.autopia.activities.ui.fragments.BookingDateTimeFragment"
        android:label="@string/book_appointment"
        tools:layout="@layout/fragment_booking_date_time" />
    <fragment
        android:id="@+id/bookingServiceFragment"
        android:name="com.example.autopia.activities.ui.fragments.BookingServiceFragment"
        android:label="@string/book_appointment"
        tools:layout="@layout/fragment_booking_service" />
    <fragment
        android:id="@+id/datePickerFragment"
        android:name="com.example.autopia.activities.ui.fragments.DatePickerFragment"
        android:label="fragment_date_picker"
        tools:layout="@layout/fragment_date_picker" />
    <activity
        android:id="@+id/navigationDrawerActivity"
        android:name="com.example.autopia.activities.ui.NavigationDrawerActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.autopia.activities.ui.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/favoriteWorkshopFragment"
        android:name="com.example.autopia.activities.ui.fragments.FavoriteWorkshopFragment"
        android:label="@string/fav_workshops"
        tools:layout="@layout/fragment_favorite_workshop" />
    <activity
        android:id="@+id/workshopInfoActivity"
        android:name="com.example.autopia.activities.ui.WorkshopInfoActivity"
        android:label="@string/workshop_details"
        tools:layout="@layout/activity_workshop_info" />
    <fragment
        android:id="@+id/workshopInfoFragment"
        android:name="com.example.autopia.activities.ui.fragments.WorkshopInfoFragment"
        android:label="@string/workshop"
        tools:layout="@layout/fragment_workshop_info" />
    <fragment
        android:id="@+id/workshopProfileInfoFragment"
        android:name="com.example.autopia.activities.ui.fragments.WorkshopProfileInfoFragment"
        android:label="fragment_workshop_profile_info"
        tools:layout="@layout/fragment_workshop_profile_info" />
    <fragment
        android:id="@+id/workshopProfileServicesFragment"
        android:name="com.example.autopia.activities.ui.fragments.WorkshopProfileServicesFragment"
        android:label="fragment_workshop_profile_services"
        tools:layout="@layout/fragment_workshop_profile_services" />
    <fragment
        android:id="@+id/pendingAppointmentsFragment"
        android:name="com.example.autopia.activities.ui.fragments.PendingAppointmentsFragment"
        android:label="fragment_pending_appointments"
        tools:layout="@layout/fragment_pending_appointments" />
    <fragment
        android:id="@+id/rejectedAppointmentsFragment"
        android:name="com.example.autopia.activities.ui.fragments.RejectedAppointmentsFragment"
        android:label="fragment_rejected_appointments"
        tools:layout="@layout/fragment_rejected_appointments" />
    <fragment
        android:id="@+id/upcomingAppointmentsFragment"
        android:name="com.example.autopia.activities.ui.fragments.UpcomingAppointmentsFragment"
        android:label="fragment_upcoming_appointments"
        tools:layout="@layout/fragment_upcoming_appointments" />
    <fragment
        android:id="@+id/appointmentDetailsFragment"
        android:name="com.example.autopia.activities.ui.fragments.AppointmentDetailsFragment"
        android:label="@string/appointment_details"
        tools:layout="@layout/fragment_appointment_details" />
    <fragment
        android:id="@+id/chatRoomFragment"
        android:name="com.example.autopia.activities.ui.fragments.ChatRoomFragment"
        tools:layout="@layout/fragment_chat_room" />
    <fragment
        android:id="@+id/viewServicesFragment"
        android:name="com.example.autopia.activities.ui.fragments.SelectServiceFragment"
        android:label="@string/select_services"
        tools:layout="@layout/fragment_view_services" />
    <fragment
        android:id="@+id/viewVehiclesFragment"
        android:name="com.example.autopia.activities.ui.fragments.SelectVehicleFragment"
        android:label="@string/select_vehicles"
        tools:layout="@layout/fragment_view_vehicles" />
    <fragment
        android:id="@+id/rescheduleAppointmentsFragment"
        android:name="com.example.autopia.activities.ui.fragments.RescheduleAppointmentsFragment"
        android:label="@string/reschedule_appointments"
        tools:layout="@layout/fragment_reschedule_appointments" />
    <fragment
        android:id="@+id/noShowAppointmentsFragment"
        android:name="com.example.autopia.activities.ui.fragments.NoShowAppointmentsFragment"
        android:label="fragment_no_show_appointments"
        tools:layout="@layout/fragment_no_show_appointments" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.autopia.activities.ui.fragments.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/appointmentInfoFragment"
        android:name="com.example.autopia.activities.ui.fragments.AppointmentInfoFragment"
        android:label="@string/service_reminder"
        tools:layout="@layout/fragment_appointment_info" />
    <fragment
        android:id="@+id/serviceReminderFragment"
        android:name="com.example.autopia.activities.ui.fragments.ServiceRemindersFragment"
        android:label="@string/service_reminders"
        tools:layout="@layout/fragment_service_reminders" />
    <fragment
        android:id="@+id/serviceReminderReviewFragment"
        android:name="com.example.autopia.activities.ui.fragments.ServiceReminderReviewFragment"
        android:label="@string/service_reminder_review" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.example.autopia.activities.ui.fragments.FeedbackFragment"
        android:label="@string/feedbacks"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/promotionDetailsFragment"
        android:name="com.example.autopia.activities.ui.fragments.PromotionDetailsFragment"
        android:label="@string/promotion"
        tools:layout="@layout/fragment_promotion_details" />
    <fragment
        android:id="@+id/chatBotFragment"
        android:name="com.example.autopia.activities.ui.fragments.ChatBotFragment"
        android:label="@string/chat_bot"
        tools:layout="@layout/fragment_chat_bot" />
    <activity
        android:id="@+id/chatBotActivity"
        android:name="com.example.autopia.activities.ui.ChatBotActivity"
        android:label="@string/chat_bot"
        tools:layout="@layout/activity_chat_bot" />
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.example.autopia.activities.ui.fragments.NewsDetailsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news_details" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.autopia.activities.ui.fragments.ProductDetailsFragment"
        android:label="Product" />
    <fragment
        android:id="@+id/servicesDetailsFragment"
        android:name="com.example.autopia.activities.ui.fragments.ServicesDetailsFragment"
        android:label="Service" />
</navigation>